# flask-react-example

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/: main.py
src/flask_react_example/: main.py
ui/: index.html  package.json
ui/src/: App.tsx
